--- a/practice2/Pandas_practical.ipynb
+++ b/practice2/Pandas_practical.ipynb
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 110,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2061,7 +2061,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2071,13 +2071,6 @@
     "df=drinks.groupby('continent').agg({'beer_servings':'sum'}).reset_index()\n",
     "df.loc[df['beer_servings'].idxmax()]\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2093,14 +2086,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "OUUl_HcPiTvh"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>continent</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AF</th>\n",
+       "      <td>53.0</td>\n",
+       "      <td>16.264151</td>\n",
+       "      <td>38.846419</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>13.00</td>\n",
+       "      <td>233.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AS</th>\n",
+       "      <td>44.0</td>\n",
+       "      <td>9.068182</td>\n",
+       "      <td>21.667034</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>123.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EU</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>142.222222</td>\n",
+       "      <td>97.421738</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>195.00</td>\n",
+       "      <td>370.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OC</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>35.625000</td>\n",
+       "      <td>64.555790</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>23.25</td>\n",
+       "      <td>212.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SA</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>62.416667</td>\n",
+       "      <td>88.620189</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>98.50</td>\n",
+       "      <td>221.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           count        mean        std  min   25%    50%     75%    max\n",
+       "continent                                                               \n",
+       "AF          53.0   16.264151  38.846419  0.0   1.0    2.0   13.00  233.0\n",
+       "AS          44.0    9.068182  21.667034  0.0   0.0    1.0    8.00  123.0\n",
+       "EU          45.0  142.222222  97.421738  0.0  59.0  128.0  195.00  370.0\n",
+       "OC          16.0   35.625000  64.555790  0.0   1.0    8.5   23.25  212.0\n",
+       "SA          12.0   62.416667  88.620189  1.0   3.0   12.0   98.50  221.0"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=drinks.groupby('continent').agg({'wine_servings':'mean'}).reset_index()\n",
+    "df=drinks.groupby('continent')['wine_servings'].describe()\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
